menu en dolarsi y arreglos

--- a/CebollitasITBA/dolarsi.html
+++ b/CebollitasITBA/dolarsi.html
@@ -47,19 +47,19 @@
               <a href="index.html">INICIO</a>
             </ul>
             <ul>
-              <a href="perfil.html">PERFIL</a>
+              <a href="">TARJETA</a>
             </ul>
             <ul>
-              <a href="transferencias.html">TRANSFERENCIAS</a>
+              <a href="">PRESTAMOS</a>
             </ul>
             <ul>
-              <a href="contactos.html">CONTACTOS</a>
+              <a href="">INVERSIONES</a>
             </ul>
             <ul>
-              <a href="tarjetas.html">TARJETAS</a>
+              <a href="Beneficios/index.html">BENEFICIOS</a>
             </ul>
             <ul>
-              <a href="dolarsi.html">DolarSi</a>
+              <a href="dolarsi.html">DOLARSI</a>
             </ul>
             <ul>
               <a href="">AYUDA</a>
@@ -89,7 +89,7 @@
                 <p id="vardo">VARIACION:</p>
               </div>
               <div class="row text-bg-secondary">
-                <p id="actdo">ACTUALIZADO:</p>
+                <p id="actdo"  class="actualizado">ACTUALIZADO:</p>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
                 <p id="vardb">VARIACION:</p>
               </div>
               <div class="row text-bg-secondary">
-                <p id="actdb">ACTUALIZADO:</p>
+                <p id="actdb"  class="actualizado">ACTUALIZADO:</p>
               </div>
             </div>
           </div>
@@ -133,7 +133,7 @@
                 <p id="vardl">VARIACION:</p>
               </div>
               <div class="row text-bg-secondary">
-                <p id="actdl">ACTUALIZADO:</p>
+                <p id="actdl" class="actualizado">ACTUALIZADO:</p>
               </div>
             </div>
           </div>
@@ -161,7 +161,7 @@
                 <p id="vardp">VARIACION:</p>
               </div>
               <div class="row text-bg-secondary">
-                <p id="actdp">ACTUALIZADO:</p>
+                <p id="actdp"  class="actualizado">ACTUALIZADO:</p>
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
                 <p id="vardbol">VARIACION:</p>
               </div>
               <div class="row text-bg-secondary">
-                <p id="actdbol">ACTUALIZADO:</p>
+                <p id="actdbol" class="actualizado">ACTUALIZADO:</p>
               </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
                 <p id="vardt">VARIACION:</p>
               </div>
               <div class="row text-bg-secondary">
-                <p id="actdt">ACTUALIZADO:</p>
+                <p id="actdt" class="actualizado">ACTUALIZADO:</p>
               </div>
             </div>
           </div>
