--- a/CebollitasITBA/Beneficios/index.html
+++ b/CebollitasITBA/Beneficios/index.html
@@ -51,14 +51,13 @@
             </svg>
           </a>
         </div>
-
       </div>
     </nav>
   </div>
 
   <nav class="container-fluid">
     <div class="banner">
-      <img src="Recursos/BANNER.jpg" class="img-fluid" alt="Pasos para canjear tus puntos" width="1600px">
+      <img src="Recursos/BANNER.jpg" class="img-fluid" alt="Pasos para canjear tus puntos" width="max-width">
     </div>
   </nav>
 
