logos redes, pregs frecuentes, menu

--- a/CebollitasITBA/Beneficios/index.html
+++ b/CebollitasITBA/Beneficios/index.html
@@ -11,7 +11,38 @@
 </head>
 
 <body>
-
+  <nav class="nav">
+    <div class="menu">
+      <li>
+        <img
+          src="LOGO V2.png"
+          alt=""
+          style="width: 200px; padding-right: -10px"
+        />
+        <ul>
+          <a href="../index.html">INICIO</a>
+        </ul>
+        <ul>
+          <a href="">TARJETA</a>
+        </ul>
+        <ul>
+          <a href="">PRESTAMOS</a>
+        </ul>
+        <ul>
+          <a href="">INVERSIONES</a>
+        </ul>
+        <ul>
+          <a href="">BENEFICIOS</a>
+        </ul>
+        <ul>
+          <a href="../dolarsi.html">DOLARSI</a>
+        </ul>
+        <ul>
+          <a href="">AYUDA</a>
+        </ul>
+      </li>
+    </div>
+  </nav>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container-fluid">
@@ -57,7 +88,7 @@
 
   <nav class="container-fluid">
     <div class="banner">
-      <img src="Recursos/BANNER.jpg" class="img-fluid" alt="Pasos para canjear tus puntos" width="max-width">
+      <img src="Recursos/BANNER.jpg" class="img-fluid" alt="Pasos para canjear tus puntos">
     </div>
   </nav>
 
