--- a/CebollitasITBA/Registrarse.html
+++ b/CebollitasITBA/Registrarse.html
@@ -45,13 +45,15 @@
                 <input
                   type="password"
                   class="form-control"
-                  placeholder="contraseña"
+                  placeholder="Contraseña"
                   id="Contraseña"
                 />
                  <input type="checkbox" id="ver" class="ver" onchange="Mostrar_Contraseña()" />
                  <label id="contra_label"  for="ver">Mostrar Contraseña</label>
               </div>
-              <a href="#olvidar" class="text-dark">olvido su contraseña?</a>
+              <a href="#olvidar" class="text-dark">¿Olvidó su contraseña?</a>
+              <br>
+              <br>
               <div class="d-grid gap-2 col-6 mx-auto" id="Boton_Login">
                 <button type="button" class="btn btn-outline-dark">
                   Enviar
