--- a/CebollitasITBA/index.html
+++ b/CebollitasITBA/index.html
@@ -44,7 +44,7 @@
         >
         <a id="prestamos" href=""
           ><span class="material-symbols-outlined"> monetization_on </span
-          >Prestamos</a
+          >Préstamos</a
         >
         <a id="inversiones" href=""
           ><span class="material-symbols-outlined"> trending_up </span
@@ -58,7 +58,7 @@
           ><span class="material-symbols-outlined"> support_agent </span
           >Ayuda</a
         >
-        <a id="promos" href=""
+        <a id="promos" href="Beneficios/index.html"
           ><span class="material-symbols-outlined"> celebration </span
           >Beneficios</a
         >
@@ -68,7 +68,7 @@
 
       <section id="--questions" class="p-5">
         <div class="container">
-          <h2 class="text-center mb-4">frequently asked questions</h2>
+          <h2 class="text-center mb-4">Preguntas frecuentes</h2>
           <div class="accordion accordion-flush" id="questions">
             <!--item 1-->
             <div class="accordion-item">
@@ -79,7 +79,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#question-one"
                 >
-                  Pregunta numero uno
+                  ¿Cómo me puedo registrar para ser cliente de ITBANK?
                 </button>
               </h2>
               <div
@@ -89,10 +89,7 @@
                 data-bs-parent="#questions"
               >
                 <div class="accordion-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-                  voluptatem iusto blanditiis illum beatae deleniti sed
-                  similique ab et praesentium. Totam dolorum necessitatibus
-                  mollitia nihil ratione aut, voluptates numquam et.
+                  Es muy simple convertirte en cliente. Ingresa a la sección de "Crear Cuenta" y registrate en pocos minutos!
                 </div>
               </div>
             </div>
@@ -105,7 +102,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#question-two"
                 >
-                  Pregunta numero dos
+                ¿Cuáles son los medios de contacto?
                 </button>
               </h2>
               <div
@@ -115,10 +112,7 @@
                 data-bs-parent="#questions"
               >
                 <div class="accordion-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-                  voluptatem iusto blanditiis illum beatae deleniti sed
-                  similique ab et praesentium. Totam dolorum necessitatibus
-                  mollitia nihil ratione aut, voluptates numquam et.
+                  Podés comunicarte con nosotros mediante nuestras redes sociales o acercándote a alguna de nuestras sucursales
                 </div>
               </div>
             </div>
@@ -233,7 +227,7 @@
             <p class="numero">30%</p>
             <p>De ahorro todos los viernes con ITBANK</p>
           </div>
-          <a href="#" class="btn btn-secondary">Ver mas</a>
+          <a href="#" class="btn btn-secondary">Ver más</a>
         </div>
         <div class="tar" id="pepe2">
           <img
@@ -245,7 +239,7 @@
             <p class="numero">30%</p>
             <p>De ahorro todos los viernes con ITBANK</p>
           </div>
-          <a href="#" class="btn btn-secondary">Ver mas</a>
+          <a href="#" class="btn btn-secondary">Ver más</a>
         </div>
 
         <div class="tar" id="pepe3">
@@ -258,7 +252,7 @@
             <p class="numero">30%</p>
             <p>De ahorro todos los viernes con ITBANK</p>
           </div>
-          <a href="#" class="btn btn-secondary">Ver mas</a>
+          <a href="#" class="btn btn-secondary">Ver más</a>
         </div>
 
         <div class="tar" id="pepe4">
@@ -271,17 +265,17 @@
             <p class="numero">30%</p>
             <p>De ahorro todos los viernes con ITBANK</p>
           </div>
-          <a href="#" class="btn btn-secondary">Ver mas</a>
+          <a href="#" class="btn btn-secondary">Ver más</a>
         </div>
       </div>
     </main>
     <footer>
-      <h2><b>UBICACION</b></h2>
+      <h2><b>UBICACIÓN</b></h2>
       <ul>
         <li><h4>Redes sociales</h4></li>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">instagram</a></li>
-        <li><a href="">Twitter</a></li>
+        <li><img src="imglogos/logoface.png" alt="Logo Facebook"width="20px"><a href="https://facebook.com">  Facebook</a></li>
+        <li><img src="imglogos/logoinsta.png" alt="Logo Instagram" width="20px"><a href="https://instagram.com">  Instagram</a></li>
+        <li><img src="imglogos/logotwitter.png" alt="Logo Twitter"width="20px"><a href="https://twitter.com">  Twitter</a></li>
       </ul>
 
       <iframe
